correct z-index on header, oops

--- a/css/master.css
+++ b/css/master.css
@@ -7,6 +7,7 @@ header {
     width: 100%;
     height: auto;
     background: white;
+    z-index: 1;
 }
 
 header > section {
